# omniglot

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
omniglot/: __init__.py  detect.py  dictionary.py  errors.py  lexeme.py  lookup.py  morpheme.py  numbers.py  omni.py  parser.py  sense.py  tags.py
omniglot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
omniglot/ara/: parse.py
omniglot/deu/: parse.py
omniglot/eng/: parse.py
omniglot/fra/: numbers.py  parse.py
omniglot/haw/: mamaka.py
omniglot/jpn/: dialect.py  numbers.py  parse.py  types.py  usage.py  utils.py
omniglot/jpn/jmdict/: convert.py  extract.py  loader.py  preprocess.py  tags.py  types.py
omniglot/jpn/kanjidic/: extract.py
omniglot/mul/: __init__.py  freedict.py  numbers.py  punctuation.py  whitespace.py
omniglot/por/: parse.py
omniglot/rus/: parse.py  types.py
omniglot/rus/openrussian/: convert.py  extract.py  loader.py  parse.py  preprocess.py  types.py
omniglot/tokens/: morpheme.py
omniglot/uxy/: dictionary.py
omniglot/wordnet/: convert.py  extract.py  lexnames.py  multi.py  symbols.py  wndb.py
omniglot/zbn/: dictionary.py
omniglot/zho/: parse.py  types.py
omniglot/zho/cedict/: convert.py  loader.py
tests/: test_ara.py  test_deu.py  test_document.py  test_eng.py  test_feature.py  test_fra.py  test_jpn.py  test_lang_detect.py  test_language.py  test_omni.py  test_por.py  test_rus.py  test_zho.py
tests/dictionary/: test_banu.py  test_freedict.py  test_frequencies.py  test_jmdict.py  test_jmdict_entries.py  test_kanjidic.py  test_kanjidic_entries.py  test_mamaka.py  test_wordnet.py  test_xian.py  test_xian_dictionary.py
